parser/y.output

 0: reduce/reduce conflict  (red'ns 74 and 4) on $end
0: shift/reduce conflict (shift 7(0), red'n 4(0)) on NL
0: shift/reduce conflict (shift 8(0), red'n 4(0)) on ';'
state 0
	$accept: .program $end 
	opt_decls: .    (74)
	stmts: .    (4)

	$end  reduce 4 (src line 74)
	NL  shift 7
	';'  shift 8
	.  reduce 74 (src line 432)

	program  goto 1
	block  goto 2
	stmts  goto 4
	opt_decls  goto 3
	decls  goto 5
	decl  goto 6

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  block.    (1)

	.  reduce 1 (src line 57)


state 3
	block:  opt_decls.    (2)
	stmts:  opt_decls.stmt 

	VAR  shift 10
	FOR  shift 13
	WHILE  shift 14
	IF  shift 32
	RETURN  shift 15
	BREAK  shift 16
	CONTINUE  shift 17
	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  reduce 2 (src line 64)

	stmt  goto 9
	if_stmt  goto 12
	expr  goto 11

state 4
	block:  stmts.opt_decls 
	stmts:  stmts.decls stmt 
	opt_decls: .    (74)

	NL  shift 7
	';'  shift 8
	.  reduce 74 (src line 432)

	opt_decls  goto 33
	decls  goto 34
	decl  goto 6

state 5
	opt_decls:  decls.    (75)
	decls:  decls.decl 

	NL  shift 7
	';'  shift 8
	.  reduce 75 (src line 434)

	decl  goto 35

state 6
	decls:  decl.    (76)

	.  reduce 76 (src line 436)


state 7
	decl:  NL.    (78)

	.  reduce 78 (src line 440)


state 8
	decl:  ';'.    (79)

	.  reduce 79 (src line 442)


state 9
	stmts:  opt_decls stmt.    (5)

	.  reduce 5 (src line 79)


state 10
	stmt:  VAR.var_decls 

	ID  shift 38
	.  error

	var_decls  goto 36
	var_decl  goto 37

state 11
	stmt:  expr.'=' expr 
	stmt:  expr.    (16)
	expr:  expr.'(' exprlist ')' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.'[' expr ']' 
	expr:  expr.'[' expr COLON expr ']' 
	expr:  expr.'[' expr COLON ']' 
	expr:  expr.'[' COLON expr ']' 
	expr:  expr.'[' COLON ']' 

	AND  shift 46
	OR  shift 47
	LT  shift 48
	LE  shift 49
	EQ  shift 50
	NE  shift 51
	GT  shift 52
	GE  shift 53
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'%'  shift 45
	'='  shift 39
	'('  shift 40
	'['  shift 54
	.  reduce 16 (src line 134)


state 12
	stmt:  if_stmt.    (9)

	.  reduce 9 (src line 99)


state 13
	stmt:  FOR.'(' ID COLON expr ')' block END 

	'('  shift 55
	.  error


state 14
	stmt:  WHILE.'(' expr ')' block END 

	'('  shift 56
	.  error


state 15
	stmt:  RETURN.    (12)
	stmt:  RETURN.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  reduce 12 (src line 114)

	expr  goto 57

state 16
	stmt:  BREAK.    (14)

	.  reduce 14 (src line 124)


state 17
	stmt:  CONTINUE.    (15)

	.  reduce 15 (src line 129)


state 18
	expr:  ID.    (27)

	.  reduce 27 (src line 196)


state 19
	expr:  NIL.    (28)

	.  reduce 28 (src line 202)


state 20
	expr:  TRUE.    (29)

	.  reduce 29 (src line 207)


state 21
	expr:  FALSE.    (30)

	.  reduce 30 (src line 212)


state 22
	expr:  FIXNUM.    (31)

	.  reduce 31 (src line 217)


state 23
	expr:  FLOATNUM.    (32)

	.  reduce 32 (src line 222)


state 24
	expr:  STRING.    (33)

	.  reduce 33 (src line 227)


state 25
	expr:  COLON.namelist '{' block '}' 
	namelist: .    (67)

	ID  shift 59
	.  reduce 67 (src line 398)

	namelist  goto 58

26: shift/reduce conflict (shift 7(0), red'n 4(0)) on NL
 26: reduce/reduce conflict  (red'ns 74 and 4) on '}'
26: shift/reduce conflict (shift 8(0), red'n 4(0)) on ';'
state 26
	expr:  '{'.block '}' 
	opt_decls: .    (74)
	stmts: .    (4)

	NL  shift 7
	'}'  reduce 4 (src line 74)
	';'  shift 8
	.  reduce 74 (src line 432)

	block  goto 60
	stmts  goto 4
	opt_decls  goto 3
	decls  goto 5
	decl  goto 6

state 27
	expr:  '-'.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 61

state 28
	expr:  '!'.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 62

state 29
	expr:  '('.expr ')' 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 63

state 30
	expr:  LIST_DISPATCH.exprlist ']' 
	expr:  LIST_DISPATCH.expr DOTDOT expr ']' 
	expr:  LIST_DISPATCH.expr DOTDOT expr ',' expr ']' 
	exprlist: .    (70)

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  reduce 70 (src line 412)

	expr  goto 65
	exprlist  goto 64
	exprlist_  goto 66

state 31
	expr:  TABLE_DISPATCH.expr_pairs opt_decls ']' 
	expr:  TABLE_DISPATCH.expr_pairs ',' opt_decls ']' 
	expr_pairs: .    (63)

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  reduce 63 (src line 378)

	expr  goto 69
	expr_pair  goto 68
	expr_pairs  goto 67

state 32
	if_stmt:  IF.'(' expr ')' block END 
	if_stmt:  IF.'(' expr ')' block ELSE block END 
	if_stmt:  IF.'(' expr ')' block elif_stmt END 

	'('  shift 70
	.  error


state 33
	block:  stmts opt_decls.    (3)

	.  reduce 3 (src line 69)


state 34
	stmts:  stmts decls.stmt 
	opt_decls:  decls.    (75)
	decls:  decls.decl 

	VAR  shift 10
	FOR  shift 13
	WHILE  shift 14
	IF  shift 32
	RETURN  shift 15
	BREAK  shift 16
	CONTINUE  shift 17
	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	NL  shift 7
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	';'  shift 8
	.  reduce 75 (src line 434)

	stmt  goto 71
	if_stmt  goto 12
	expr  goto 11
	decl  goto 35

state 35
	decls:  decls decl.    (77)

	.  reduce 77 (src line 438)


state 36
	stmt:  VAR var_decls.    (7)
	var_decls:  var_decls.',' var_decl 

	','  shift 72
	.  reduce 7 (src line 88)


state 37
	var_decls:  var_decl.    (17)

	.  reduce 17 (src line 140)


state 38
	var_decl:  ID.    (19)
	var_decl:  ID.'=' expr 

	'='  shift 73
	.  reduce 19 (src line 150)


state 39
	stmt:  expr '='.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 74

state 40
	expr:  expr '('.exprlist ')' 
	exprlist: .    (70)

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  reduce 70 (src line 412)

	expr  goto 76
	exprlist  goto 75
	exprlist_  goto 66

state 41
	expr:  expr '+'.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 77

state 42
	expr:  expr '-'.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 78

state 43
	expr:  expr '*'.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 79

state 44
	expr:  expr '/'.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 80

state 45
	expr:  expr '%'.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 81

state 46
	expr:  expr AND.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 82

state 47
	expr:  expr OR.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 83

state 48
	expr:  expr LT.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 84

state 49
	expr:  expr LE.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 85

state 50
	expr:  expr EQ.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 86

state 51
	expr:  expr NE.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 87

state 52
	expr:  expr GT.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 88

state 53
	expr:  expr GE.expr 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 89

state 54
	expr:  expr '['.expr ']' 
	expr:  expr '['.expr COLON expr ']' 
	expr:  expr '['.expr COLON ']' 
	expr:  expr '['.COLON expr ']' 
	expr:  expr '['.COLON ']' 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 91
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 90

state 55
	stmt:  FOR '('.ID COLON expr ')' block END 

	ID  shift 92
	.  error


state 56
	stmt:  WHILE '('.expr ')' block END 

	NIL  shift 19
	TRUE  shift 20
	FALSE  shift 21
	ID  shift 18
	FIXNUM  shift 22
	FLOATNUM  shift 23
	STRING  shift 24
	LIST_DISPATCH  shift 30
	TABLE_DISPATCH  shift 31
	COLON  shift 25
	'-'  shift 27
	'('  shift 29
	'{'  shift 26
	'!'  shift 28
	.  error

	expr  goto 93

state 57
	stmt:  RETURN expr.    (13)
	expr:  expr.'(' exprlist ')' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.'[' expr ']' 
	expr:  expr.'[' expr COLON expr ']' 
	expr:  expr.'[' expr COLON ']' 
	expr:  expr.'[' COLON expr ']' 
	expr:  expr.'[' COLON ']' 

	AND  shift 46
	OR  shift 47
	LT  shift 48
	LE  shift 49
	EQ  shift 50
	NE  shift 51
	GT  shift 52
	GE  shift 53
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'%'  shift 45
	'('  shift 40
	'['  shift 54
	.  reduce 13 (src line 119)


state 58
	expr:  COLON namelist.'{' block '}' 
	namelist:  namelist.',' opt_decls ID 

	','  shift 95
	'{'  shift 94
	.  error


state 59
	namelist:  ID.    (68)

	.  reduce 68 (src line 403)


state 60
	expr:  '{' block.'}' 

	'}'  shift 96
	.  error


61: shift/reduce conflict (shift 50(0), red'n 37(6)) on EQ
61: shift/reduce conflict (shift 51(0), red'n 37(6)) on NE
61: shift/reduce conflict (shift 40(0), red'n 37(6)) on '('
61: shift/reduce conflict (shift 54(0), red'n 37(6)) on '['
state 61
	expr:  expr.'(' exprlist ')' 
	expr:  '-' expr.    (37)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.'[' expr ']' 
	expr:  expr.'[' expr COLON expr ']' 
	expr:  expr.'[' expr COLON ']' 
	expr:  expr.'[' COLON expr ']' 
	expr:  expr.'[' COLON ']' 

	EQ  shift 50
	NE  shift 51
	'('  shift 40
	'['  shift 54
	.  reduce 37 (src line 247)


62: shift/reduce conflict (shift 50(0), red'n 38(6)) on EQ
62: shift/reduce conflict (shift 51(0), red'n 38(6)) on NE
62: shift/reduce conflict (shift 40(0), red'n 38(6)) on '('
62: shift/reduce conflict (shift 54(0), red'n 38(6)) on '['
state 62
	expr:  expr.'(' exprlist ')' 
	expr:  '!' expr.    (38)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.'[' expr ']' 
	expr:  expr.'[' expr COLON expr ']' 
	expr:  expr.'[' expr COLON ']' 
	expr:  expr.'[' COLON expr ']' 
	expr:  expr.'[' COLON ']' 

	EQ  shift 50
	NE  shift 51
	'('  shift 40
	'['  shift 54
	.  reduce 38 (src line 252)


state 63
	expr:  expr.'(' exprlist ')' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  '(' expr.')' 
	expr:  expr.'[' expr ']' 
	expr:  expr.'[' expr COLON expr ']' 
	expr:  expr.'[' expr COLON ']' 
	expr:  expr.'[' COLON expr ']' 
	expr:  expr.'[' COLON ']' 

	AND  shift 46
	OR  shift 47
	LT  shift 48
	LE  shift 49
	EQ  shift 50
	NE  shift 51
	GT  shift 52
	GE  shift 53
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'%'  shift 45
	'('  shift 40
	')'  shift 97
	'['  shift 54
	.  error


state 64
	expr:  LIST_DISPATCH exprlist.']' 

	']'  shift 98
	.  error

